@@ -2,6 +2,15 @@
 
         Reviewed by Darin.
 
+		Add KWQCFAutorelease for autoreleasing CF objects.
+        * kwq/KWQFoundationExtras.h:
+        (KWQCFAutorelease):
+        New.
+
+2004-12-17  David Harrison  <harrison@apple.com>
+
+        Reviewed by Darin.
+
 		Fix GC compatibility in getNSString.
 
         * kwq/KWQString.mm:
